--- a/src/pages/Stock/index.css
+++ b/src/pages/Stock/index.css
@@ -10,7 +10,17 @@
     color:black;
 }
 
-.padding
+.padding-left-100
 {
-    padding-right: 20%;
+    padding-left: 100px;
+}
+
+.padding-left-50
+{
+    padding-left: 50px;
+}
+
+.font-bold
+{
+    font-weight: bold;
 }
